@@ -141,7 +141,9 @@
       <li><a href="cmd_bp.html#clear"><b>clear</b> Clear fix breakpoint</a> </li>
       <li><a href="cmd_bp.html#delete"><b>delete</b> Delete breakpoint(s)</a></li>
       <li><a href="cmd_bp.html#commands"><b>commands</b> Define breakpoint
-          script</a></li>
+        script</a></li>
+      <li><a href="cmd_bp.html#display"><b>display</b> Set expression to show on breakpoint</a></li>
+      <li><a href="cmd_bp.html#undisplay"><b>undisplay</b> Remove display expression</a></li>
     </ul>
     <!--DUMP--> <a href="cmd_dump.html">Dump commands</a>
     <ul>
