@@ -143,7 +143,7 @@ under certain conditions; type `show c' for details.
     <h3><a name="expression">expression [/format] <i>expr</i></a></h3>
     Executes "expr" as an expression. For more about expressions, see <a href="syntax.html">command
       syntax</a>.
-    <pre>0&gt; <font color="#118811">expr 1 + 2</font>
+    <pre>0&gt; <font color="#118811">expr 1+2</font>
 3
 0&gt; <font color="#118811">expr xram[256*dph+dpl]= &amp;sp</font>
 129
