@@ -108,7 +108,7 @@ Output file: <b>outfile.txt</b>
 #define SIF_ADDRESS_SPACE	__xdata
 #define SIF_ADDRESS		0xffff
 
-unsigned char SIF_ADDRESS_SPACE * volatile sif;<br><br>void
+volatile unsigned char SIF_ADDRESS_SPACE * sif;<br><br>void
 main(void)
 {
   sif= (unsigned char SIF_ADDRESS_SPACE *) SIF_ADDRESS;
