@@ -386,4 +386,60 @@ brk_coll::bp_at(t_addr addr)
 }
 
 
+t_index
+cl_display_list::add(void *item)
+{
+  t_index r= cl_list::add(item);
+  class cl_display *d;
+  d= (cl_display*)item;
+  if (d)
+    d->nr= ++cnt;
+  return r;
+}
+
+void
+cl_display_list::undisplay(int nr)
+{
+  class cl_display *d;
+  int i;
+  for (i= 0; i < count; i++)
+    {
+      d= (cl_display*)(at(i));
+      if (d->nr == nr)
+	{
+	  free_at(i);
+	  return;
+	}
+    }
+}
+
+void
+cl_display_list::do_display(class cl_console_base *con)
+{
+  class cl_commander_base *cmd= application->get_commander();
+  int i;
+  class cl_display *d;
+  if (!con)
+    {
+      if (!cmd)
+	return;
+      if ((con= cmd->frozen_console)==NULL)
+	con= cmd->actual_console;
+    }
+  if (!con)
+    return;
+  con->dd_color("answer");
+  for (i=0; i<count; i++)
+    {
+      d= (cl_display*)(at(i));
+      con->dd_printf("%d:", d->nr);
+      if (d->fmt.nempty())
+	con->dd_printf("%s", d->fmt.c_str());
+      con->dd_printf(" %s = ", d->c_str());
+      t_mem v= application->eval(*d);
+      con->print_expr_result(v, d->fmt);
+    }
+}
+
+
 /* End of brk.cc */
