@@ -155,6 +155,35 @@ public:
   virtual bool bp_at(t_addr addr);
 };
 
+class cl_display: public chars
+{
+public:
+  int nr;
+  chars fmt;
+public:
+  cl_display(const chars &f, const chars &e): chars(e) { nr=0; fmt= f; }
+};
+
+class cl_display_list: public cl_list
+{
+protected:
+  int cnt;
+public:
+  cl_display_list(void): cl_list()
+  {
+    cnt= 0;
+  }
+  cl_display_list(t_index alimit, t_index adelta, const char *aname):
+    cl_list(alimit, adelta, aname)
+  {
+    cnt= 0;
+  }
+public:
+  virtual t_index  add(void *item);
+  virtual void undisplay(int nr);
+  virtual void do_display(class cl_console_base *con);
+};
+
 
 #endif
 
